Revision history for Pod-Readme

v1.0.1_07
  [Documentation]
  - More documentation tweaks.

  [Enhancements]
  - Added a depends_on method that returns a list of files that the
    README depends on.

  [Other Changes]
  - Moved pod2readme tests to xt directory for author tests, due to
    inconsistent behaviour on different platforms.

v1.0.1_06 2014-10-10
  [Documentation]
  - More documentation tweaks.

  - Changed pod2readme usage text to match abstract.

  [Bug Fixes]
  - Added minimum Perl version to Makefile.PL.

  - Removed use of Path::Class in pod2readme utility.

  [Other Changes]
  - Added rudimentary tests for pod2readme script.

  [Enhancements]
  - The requires plugin uses minimum module versions to check if a
    module is in the core-list.

v1.0.1_05 2014-10-09 19:36 BST
  [Documentation]
  - Corrected typos in POD.

  [Bug Fixes]
  - Disabled use of Test::Kit, since it seems to have problems with
    Test::Builder 1.301001_056.

v1.0.1_04 2014-10-08 23:27 BST
  [Documentation]
  - Changed abstract to make the module's purpose more obvious.

  [Bug Fixes]
  - Added missing IO::String prereq to tests.

v1.0.1_03 2014-10-08 22:42 BST
  [Documentation]
  - Added Acknowledgements section to POD.

  [Bug Fixes]
  - Added minimum version prereq of Moo to fix issue with undef
    defaults.

  [Enhancements]
  - Changed to use Path::Tiny instead of Path::Class.

  - Reverted back to using Exporter, since most core modules already
    use it.

v1.0.1_02 2014-10-08 00:49 BST
  [Documentation]
  - Added missing timestamp to Changes.

  - Updated README.pod.

  [Other Changes]
  - Changed how versions are defined in modules, to handle quirks of
    namespace::autoclean.

  - Changed to use Exporter::Lite.

v1.0.1_01 2014-10-08 00:26 BST
  [Bug Fixes]
  - Fixed argument name for include command.

  - Changed tests to compare files so they handle different Windows
    line endings.

  [Documentation]
  - Fixed POD errors and typos.

  [Enhancements]